<resources>
    <string name="app_name">CodeBase App</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="simple_data_text">Simple Data</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_in">Sign In</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Dummy App</string>

    <!--Generic Messages-->
    <string name="positive_button_name">Ok</string>
    <string name="negative_button_name">Cancel</string>
    <string name="failure">failure</string>
    <string name="authentication_failure">authenticationfailure</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="yes_string">Yes</string>
    <string name="no_string">No</string>
    <string name="updating_info">Updating...</string>
    <string name="no_data_available">No Data Available</string>
    <string name="no_working_internet_connection">No working internet connection is found!</string>
    <string name="failed_to_login">Invalid User Credentials</string>
    <string name="failed_to_login_server">Server Not Responding</string>


    <!--Validation Text-->
    <string name="validation_empty_text">Field must not be Empty!</string>

    <!-- Log In RHView-->
    <string name="login_user_name">User Name</string>
    <string name="login_password_text">Password</string>
    <string name="login_login_text">Log In</string>
    <string name="login_forgot_password_text">Forgot Password?</string>
    <string name="login_another_account_text">Use Another Account</string>

    <!-- Account Reset View -->
    <string name="title_activity_account_reset">Account Delete</string>
    <string name="reset_acc_warning_text">This action will delete the existing user info from the application. The new user will be the default user in the application instead. To proceed enable the check button and enter the password of old user and delete.</string>
    <string name="reset_acc_password_hint">Password for %s</string>
    <string name="delete_text">Delete</string>
    <string name="agree_text">I Agree</string>
    <string name="reset_agree_error">Please Read the Warning Carefully</string>
    <string name="verify_credentials_text">Verifying Credentials</string>

    <!--Main RHView-->
    <string name="main_test_network_layer">Test Network Layer!</string>
    <string name="main_test_security_layer">Test Security Layer!</string>
    <string name="main_test_data_repo_layer">Test Data/Repo Layer!</string>
    <string name="main_test_login_functionality">Test LogIn Functionality</string>

    <!--Authenticated RHView -->
    <string name="authenticated_auth_text">Valid User</string>
    <string name="authenticated_successful_log_in">Successful Log In</string>
    <string name="authenticated_load_user_data">Load User Data</string>
    <string name="authenticated_log_out_text">Log out</string>
    <string name="authenticated_update_user_text">Update User Name</string>
    <string name="authenticated_enter_new_user_name">Enter New User Name</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="trouble_accessing">Trouble Accessing Your Account?</string>
    <string name="reset_password">Forgot your password? Enter your corporate email. If your email is valid we will send you a email with a link to reset your password.</string>
    <string name="email_forgot_hint">Email or User id</string>
    <string name="continue_text">Continue</string>
    <string name="login_help">If you have a different problem accessing your account.Please see our Login Problem Help Page</string>

    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_profile">Profile</string>
    <string name="sign_in_to_continue">SIGN IN TO CONTINUE</string>

    <string name="base_login_test_url">http://192.168.10.64:8084/common/user/v1/login</string>
    <string name="base_profile_test_url">http://192.168.10.64:8082/oms/staff/v1/get_staff_by_userid</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="home_text">Home</string>
    <string name="settings_text">Settings</string>
    <string name="restarting_text">Re-Starting</string>
    <string name="farshi_text">Farsi</string>
    <string name="english_text">English</string>
    <string name="chamge_lang_warning">Warning: Will Re-start Application</string>
    <string name="language_settings">Language Settings</string>
    <string name="title_activity_restart">RestartActivity</string>
    <string name="cancel_text">Cancel</string>
    <string name="start_text">Start</string>
    <string name="stoped_text">Stop</string>


</resources>
