<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.connect.rh.presenter.activities.common.MainActivity">

    <Button
        android:id="@+id/main_network_button"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:text="@string/main_test_network_layer" />
    <Button
    android:id="@+id/main_security_button"
    android:layout_width="match_parent"
    android:layout_below="@+id/main_network_button"
    android:layout_height="wrap_content"
    android:text="@string/main_test_security_layer" />
    <Button
        android:id="@+id/main_data_button"
        android:layout_width="match_parent"
        android:layout_below="@+id/main_security_button"
        android:layout_height="wrap_content"
        android:text="@string/main_test_data_repo_layer" />
    <Button
        android:id="@+id/main_login_button"
        android:layout_width="match_parent"
        android:layout_below="@+id/main_data_button"
        android:layout_height="wrap_content"
        android:text="@string/main_test_login_functionality" />
</RelativeLayout>
