<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.connect.rh.presenter.common.account.forgot.ForgotPasswordActivity"
    tools:showIn="@layout/activity_forgot_password">
    <RelativeLayout
        android:background="@drawable/square_shape_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:padding="@dimen/ten_dp"
            android:id="@+id/change_header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/change_access_text"
                android:text="@string/trouble_accessing"
                android:layout_margin="@dimen/ten_dp"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/seventeen_sp"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_below="@+id/change_access_text"
                android:layout_width="match_parent"
                android:background="@color/colorDevider"
                android:layout_height="@dimen/one_dp"></View>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/change_details_layout"
            android:layout_margin="@dimen/ten_dp"
            android:layout_below="@+id/change_header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="@dimen/ten_dp"
                android:layout_marginRight="@dimen/ten_dp"
                android:textColor="@color/colorPrimaryText"
                android:id="@+id/change_details_text"
                android:layout_width="match_parent"
                android:text="@string/reset_password"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/change_functional_layout"
            android:layout_margin="@dimen/ten_dp"
            android:layout_below="@+id/change_details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_margin="@dimen/ten_dp"
                android:textColor="@color/colorPrimaryText"
                android:id="@+id/change_account_edit"
                android:hint="@string/email_forgot_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:layout_margin="@dimen/ten_dp"
                android:id="@+id/change_continue_button"
                android:layout_below="@+id/change_account_edit"
                android:text="@string/continue_text"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="@dimen/thirty_dp"
                android:id="@+id/change_support_text"
                android:layout_marginRight="@dimen/ten_dp"
                android:layout_marginLeft="@dimen/ten_dp"
                android:text="@string/login_help"
                android:layout_below="@+id/change_continue_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        </RelativeLayout>
</RelativeLayout>
